--- a/style.css
+++ b/style.css
@@ -3,7 +3,14 @@ body {
     width: 75%;
     margin: auto;
     padding: 25px;
+    background-color: white;
+    color: black;
     font-size: 25px;
+}
+
+.dark-mode {
+    background-color: rgb(56,56,56);
+    color: silver;
 }
 
 a {
@@ -22,4 +29,18 @@ ul {
     width: 50%;
     margin: 0 auto;
     padding: 5px;
+}
+
+.slidecontainer {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
+
+#darkModeBtn {
+    border: 1px solid silver;
+    border-radius: 50%;
+    background-color: rgb(56,56,56);
+    width:35px;
+    height:35px;
 }
