--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     width: 75%;
     margin: auto;
     padding: 25px;
-    background-color: white;
+    background-color: silver;
     color: black;
     font-size: 25px;
 }
